# multiagent-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/seed/: documents.jsonl
db/doc-store/init/: 01-create-extension.sql
docs/plans/: product-roadmap.md
langfuse/: docker-compose.yml
learning/: 00-orientation.md  README.md
src/multiagent_rag/: __init__.py  config.py  db.py  llm.py  smoke.py  tracing.py
src/multiagent_rag/checkpointing/: __init__.py  demo.py
src/multiagent_rag/graph/: __init__.py  build.py  nodes.py  run.py  state.py
src/multiagent_rag/ingest/: __init__.py  extract.py  load.py  search.py
src/multiagent_rag/service/: __init__.py  app.py
src/multiagent_rag/sql_agent/: __init__.py  query.py  schema.py  seed.py  service.py
