[project]
name = "multiagent-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Haraldur Kristjansson", email = "haraldur.kristjansson@hrmsoftware.se" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "fastembed>=0.8.0",
    "langchain>=1.3.13",
    "langfuse>=4.14.0",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-postgres>=3.1.0",
    "pgvector>=0.5.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
multiagent-rag = "multiagent_rag:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
